@@ -2,6 +2,7 @@ bingd 0.3.1
 ===========
 
 * Add zscore as an optional argument when constructing a GWAS object
+* load.feature() checks loaded object class is GRanges
 
 
 bingd 0.3.0
